--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,12 +1,13 @@
-@import "cross-browser";
-@import "normalize";
-
 @import "variables";
 
 @import "mixins/button";
 @import "mixins/grid";
+@import "mixins/utilties";
 
 @import "cross-browser";
 @import "normalize";
 @import "grid";
 @import "button";
+@import "navbar";
+@import "stage";
+@import "type";
