--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
  * What follows is the result of much research on cross-browser styling.
  * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
@@ -7,11 +8,7 @@
    Base styles: opinionated defaults
    ========================================================================== */
 html {
-<<<<<<< HEAD
-  color: #222;
-=======
   color: #333;
->>>>>>> 7ca505b4db572e1edf96e24b7c9cfe0fa9a9d433
   font-size: 1em;
   line-height: 1.4; }
 
@@ -80,6 +77,19 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+html {
+  font-size: 10px;
+  -webkit-tap-highlight-color: transparent; }
+
+body {
+  font-family: tahoma, arial, "pingfang sc", "Hiragino Sans GB", "宋体", sans-serif;
+  font-size: 14px;
+  background-color: #fff; }
+
+a {
+  color: #333;
+  text-decoration: none; }
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -361,7 +371,6 @@ mark {
  */
 small {
   font-size: 80%; }
-<<<<<<< HEAD
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -408,54 +417,6 @@ img {
 svg:not(:root) {
   overflow: hidden; }
 
-=======
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline; }
-
-sub {
-  bottom: -0.25em; }
-
-sup {
-  top: -0.5em; }
-
-/* Embedded content
-   ========================================================================== */
-/**
- * Add the correct display in IE 9-.
- */
-audio,
-video {
-  display: inline-block; }
-
-/**
- * Add the correct display in iOS 4-7.
- */
-audio:not([controls]) {
-  display: none;
-  height: 0; }
-
-/**
- * Remove the border on images inside links in IE 10-.
- */
-img {
-  border-style: none; }
-
-/**
- * Hide the overflow in IE.
- */
-svg:not(:root) {
-  overflow: hidden; }
-
->>>>>>> 7ca505b4db572e1edf96e24b7c9cfe0fa9a9d433
 /* Forms
    ========================================================================== */
 /**
@@ -650,8 +611,6 @@ template {
 [hidden] {
   display: none; }
 
-<<<<<<< HEAD
-=======
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -918,5 +877,218 @@ template {
   line-height: 47px;
   border-radius: 4px; }
 
->>>>>>> 7ca505b4db572e1edf96e24b7c9cfe0fa9a9d433
+.navbar-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 20;
+  margin-top: 70px; }
+
+.navbar {
+  position: relative;
+  min-height: 80px;
+  padding: 0 15px;
+  margin-left: -15px;
+  margin-right: -15px; }
+  .navbar .navbar-header {
+    float: left; }
+
+.navbar-brand {
+  float: left;
+  line-height: 80px; }
+
+.nav {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none; }
+  .nav:before, .nav:after {
+    content: " ";
+    display: table; }
+  .nav:after {
+    clear: both; }
+  .nav > li {
+    position: relative;
+    float: left;
+    margin-right: 25px; }
+    .nav > li > a {
+      position: relative;
+      display: block;
+      font-size: 18px;
+      padding-top: 36px;
+      padding-bottom: 20px;
+      padding-left: 19px;
+      padding-right: 19px; }
+
+.navbar-nav {
+  float: left;
+  margin-left: 140px; }
+
+.navbar-default {
+  background-color: #fff; }
+  .navbar-default .navbar-nav > .active > a {
+    color: #f23d46;
+    border-bottom: 4px solid #f3474b; }
+  .navbar-default:before {
+    position: absolute;
+    left: -10px;
+    top: -10px;
+    content: '';
+    display: block;
+    width: 60px;
+    height: 60px;
+    background-color: #f23d46;
+    z-index: -1; }
+
+.navbar-btn {
+  margin-top: 15.5px;
+  margin-bottom: 15.5px; }
+
+* {
+  box-sizing: border-box; }
+
+*:before,
+*:after {
+  box-sizing: border-box; }
+
+.flexslider .slides li {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  height: 700px;
+  position: relative; }
+
+.about .slides li {
+  height: 403px; }
+
+.about {
+  margin: 0 auto;
+  width: 988px; }
+  .about .about-left {
+    margin-right: 45px;
+    width: 500px; }
+  .about .about-left, .about .about-right {
+    float: left; }
+  .about .about-right {
+    width: 440px; }
+    .about .about-right .btn {
+      width: 100%;
+      line-height: 65px; }
+    .about .about-right p {
+      color: #4d4d4d; }
+  .about .about-right-title {
+    padding: 18px 15px;
+    border-top: 1px solid #b3b3b3;
+    border-bottom: 1px solid #b3b3b3; }
+    .about .about-right-title .iconfont {
+      margin-right: 21px;
+      font-size: 65px;
+      color: #cc2427;
+      vertical-align: middle; }
+    .about .about-right-title .title {
+      font-size: 26px;
+      vertical-align: middle; }
+
+.category {
+  padding-top: 65px;
+  padding-bottom: 160px; }
+  .category:nth-of-type(2n) {
+    background-color: #f4f7fa; }
+  .category .category-hd {
+    position: relative;
+    margin-bottom: 80px;
+    text-align: center; }
+    .category .category-hd .secondary:after {
+      position: absolute;
+      bottom: -19px;
+      left: 50%;
+      transform: translateX(-50%);
+      content: '';
+      display: block;
+      width: 80px;
+      height: 2px;
+      background-color: #f23d46; }
+  .category .category-bd:before, .category .category-bd:after {
+    content: " ";
+    display: table; }
+  .category .category-bd:after {
+    clear: both; }
+  .category .category-bd .service {
+    padding-bottom: 41px;
+    text-align: center;
+    transition: background-color .5s ease; }
+    .category .category-bd .service .icon {
+      margin: 40px auto;
+      width: 80px;
+      height: 80px;
+      padding-top: 25px;
+      background: url(../img/aperture.png) no-repeat center center; }
+      .category .category-bd .service .icon span {
+        font-size: 30px; }
+    .category .category-bd .service .desc > h4 {
+      margin-bottom: 19px; }
+    .category .category-bd .service .desc > p {
+      color: #999; }
+    .category .category-bd .service:hover {
+      background-color: #f3474b;
+      color: #fff;
+      border-radius: 6px; }
+      .category .category-bd .service:hover .desc > p {
+        color: #fff; }
+
+.story a {
+  position: relative;
+  display: block; }
+  .story a img {
+    display: block;
+    max-width: 100%;
+    height: auto; }
+  .story a .story-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: center;
+    color: #fff;
+    background-color: rgba(211, 33, 42, 0.7); }
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  font-weight: 400;
+  line-height: 1;
+  color: inherit;
+  margin-top: 0;
+  margin-bottom: 11px; }
+
+.secondary {
+  font-size: 26px;
+  font-weight: 100;
+  color: #999;
+  line-height: 1; }
+
+h1, .h1 {
+  font-size: 36px; }
+
+h2, .h2 {
+  font-size: 30px; }
+
+h3, .h3 {
+  font-size: 24px; }
+
+h4, .h4 {
+  font-size: 18px; }
+
+h5, .h5 {
+  font-size: 14px; }
+
+h6, .h6 {
+  font-size: 12px; }
+
+p {
+  margin-top: 20px;
+  margin-bottom: 22px;
+  margin-bottom: 19px;
+  line-height: 1.9;
+  letter-spacing: 1.4px; }
+
 /*# sourceMappingURL=main.css.map */
