--- a/src/sass/_cross-browser.scss
+++ b/src/sass/_cross-browser.scss
@@ -92,8 +92,21 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+html {
+    font-size: 10px;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 
+body {
+    font-family: $font-family-base;
+    font-size: $font-size-base;
+    background-color: $body-bg;
+}
 
+a {
+    color: #333;
+    text-decoration: none;
+}
 
 
 
