--- a/src/css/flexslider.css
+++ b/src/css/flexslider.css
@@ -10,15 +10,7 @@
  *
  */
 /* ====================================================================================================================
- * FONT-FACE
- * ====================================================================================================================*/
-@font-face {
-    font-family: 'flexslider-icon';
-    src: url('fonts/flexslider-icon.eot');
-    src: url('fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'), url('fonts/flexslider-icon.woff') format('woff'), url('fonts/flexslider-icon.ttf') format('truetype'), url('fonts/flexslider-icon.svg#flexslider-icon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+
 /* ====================================================================================================================
  * RESETS
  * ====================================================================================================================*/
@@ -111,16 +103,18 @@ html[xmlns] .flexslider .slides {
 .flex-direction-nav a {
     text-decoration: none;
     display: block;
-    width: 40px;
-    height: 40px;
+    width: 86px;
+    height: 86px;
+    line-height: 86px;
     margin: -20px 0 0;
     position: absolute;
     top: 50%;
     z-index: 10;
     overflow: hidden;
     cursor: pointer;
-    color: rgba(0, 0, 0, 0.8);
-    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+    color: #f23d46;
+    text-align: center;
+    border: 1px solid #f23d46;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     -ms-transition: all 0.3s ease-in-out;
@@ -132,32 +126,21 @@ html[xmlns] .flexslider .slides {
     font-size: 40px;
     display: inline-block;
     content: '\e602';
-    color: rgba(0, 0, 0, 0.8);
     text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
 }
 .flex-direction-nav a.flex-next:before {
     content: '\e663';
 }
 .flex-direction-nav .flex-prev {
+    left: -107px;
 }
 .flex-direction-nav .flex-next {
-    right: 10px;
-    text-align: right;
+    right: -108px;
 }
-/*.flexslider:hover .flex-direction-nav .flex-prev {*/
-    /*opacity: 0.7;*/
-    /*left: 10px;*/
-/*}*/
-/*.flexslider:hover .flex-direction-nav .flex-prev:hover {*/
-    /*opacity: 1;*/
-/*}*/
-/*.flexslider:hover .flex-direction-nav .flex-next {*/
-    /*opacity: 0.7;*/
-    /*right: 10px;*/
-/*}*/
-/*.flexslider:hover .flex-direction-nav .flex-next:hover {*/
-    /*opacity: 1;*/
-/*}*/
+.flex-direction-nav a:hover {
+    color: #fff;
+    background-color: #f23d46;
+}
 .flex-direction-nav .flex-disabled {
     opacity: 0!important;
     filter: alpha(opacity=0);
