--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1039,18 +1039,53 @@ template {
 
 .story a {
   position: relative;
-  display: block; }
+  display: block;
+  transition: transform .5s ease-in-out; }
   .story a img {
     display: block;
     max-width: 100%;
     height: auto; }
   .story a .story-overlay {
     position: absolute;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
+    opacity: 0;
     text-align: center;
     color: #fff;
-    background-color: rgba(211, 33, 42, 0.7); }
+    background-color: rgba(211, 33, 42, 0.7);
+    transition: opacity .5s ease-out; }
+    .story a .story-overlay h1 {
+      margin-top: 81.5px;
+      margin-bottom: 32px;
+      transform: translate3d(0, 40px, 0);
+      transition: transform .5s ease-in-out; }
+    .story a .story-overlay p {
+      position: relative;
+      margin: 0 auto;
+      width: 217px;
+      letter-spacing: 2.1px;
+      transform: translate3d(0, 40px, 0);
+      transition: transform .5s ease-in-out; }
+      .story a .story-overlay p:after {
+        position: absolute;
+        left: 50%;
+        bottom: -17px;
+        content: '';
+        display: block;
+        height: 3px;
+        width: 43px;
+        background-color: #fff;
+        transform: translate3d(-50%, 0, 0); }
+  .story a:hover {
+    transform: scale(1.18); }
+    .story a:hover .story-overlay {
+      opacity: 1; }
+    .story a:hover h1 {
+      transform: translate3d(0, 0, 0); }
+    .story a:hover p {
+      transform: translate3d(0, 0, 0); }
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
