--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -137,6 +137,7 @@
     a {
         position: relative;
         display: block;
+        transition: transform .5s ease-in-out;
 
         img {
             @include img-responsive()
@@ -144,11 +145,59 @@
 
         .story-overlay {
             position: absolute;
+            width: 100%;
+            height: 100%;
             top: 0;
             left: 0;
+            opacity: 0;
             text-align: center;
             color: #fff;
             background-color: rgba(211, 33, 42, .7);
+            transition: opacity .5s ease-out;
+
+            h1 {
+                margin-top: 81.5px;
+                margin-bottom: 32px;
+                transform: translate3d(0, 40px, 0);
+                transition: transform .5s ease-in-out;
+            }
+
+            p {
+                position: relative;
+                margin: 0 auto;
+                width: 217px;
+                letter-spacing: 2.1px;
+                transform: translate3d(0, 40px, 0);
+                transition: transform .5s ease-in-out;
+
+                &:after {
+                    position: absolute;
+                    left: 50%;
+                    bottom: -17px;
+                    content: '';
+                    display: block;
+                    height: 3px;
+                    width: 43px;
+                    background-color: #fff;
+                    transform: translate3d(-50%, 0, 0);
+                }
+            }
+        }
+
+        &:hover {
+            transform: scale(1.18);
+
+            .story-overlay {
+                opacity: 1;
+            }
+
+            h1 {
+                transform: translate3d(0, 0, 0);
+            }
+
+            p {
+                transform: translate3d(0, 0, 0);
+            }
         }
     }
 }
