--- a/src/sass/_stage.scss
+++ b/src/sass/_stage.scss
@@ -131,6 +131,15 @@
             }
         }
     }
+
+    .category-ft {
+        margin-top: 80px;
+
+        .category-action {
+            margin: 0 auto;
+            display: block;
+        }
+    }
 }
 
 .story {
