--- a/src/css/main.css
+++ b/src/css/main.css
@@ -945,6 +945,29 @@ template {
   margin-top: 15.5px;
   margin-bottom: 15.5px; }
 
+.nav-tabs {
+  margin-left: -15px;
+  margin-right: -15px; }
+  .nav-tabs > li {
+    margin-right: 24px; }
+    .nav-tabs > li:last-child {
+      margin-right: 0; }
+    .nav-tabs > li > a {
+      padding: 23px 0;
+      width: 180px;
+      font-size: 24px;
+      text-align: center;
+      background-color: #fff; }
+    .nav-tabs > li > a:hover, .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+      color: #fff;
+      background-color: #f23d46; }
+
+.tab-content > .tab-pane {
+  display: none; }
+
+.tab-content > .active {
+  display: block; }
+
 * {
   box-sizing: border-box; }
 
@@ -1036,6 +1059,11 @@ template {
       border-radius: 6px; }
       .category .category-bd .service:hover .desc > p {
         color: #fff; }
+  .category .category-ft {
+    margin-top: 80px; }
+    .category .category-ft .category-action {
+      margin: 0 auto;
+      display: block; }
 
 .story a {
   position: relative;
@@ -1078,13 +1106,13 @@ template {
         width: 43px;
         background-color: #fff;
         transform: translate3d(-50%, 0, 0); }
-  .story a:hover {
+  .story a:hover, .story .nav-tabs > li.active > a {
     transform: scale(1.18); }
-    .story a:hover .story-overlay {
+    .story a:hover .story-overlay, .story .nav-tabs > li.active > a .story-overlay {
       opacity: 1; }
-    .story a:hover h1 {
+    .story a:hover h1, .story .nav-tabs > li.active > a h1 {
       transform: translate3d(0, 0, 0); }
-    .story a:hover p {
+    .story a:hover p, .story .nav-tabs > li.active > a p {
       transform: translate3d(0, 0, 0); }
 
 h1, h2, h3, h4, h5, h6,
