--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -80,3 +80,51 @@
     margin-top: 15.5px;
     margin-bottom: 15.5px;
 }
+
+.nav-tabs {
+    margin-left: -15px;
+    margin-right: -15px;
+
+    > li {
+        margin-right: 24px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+
+        & > a {
+            padding: 23px 0;
+            width: 180px;
+            font-size: 24px;
+            text-align: center;
+            background-color: #fff;
+        }
+
+        &.active > a {
+            &,
+            &:hover,
+            &:focus {
+                @extend a:hover;
+            }
+        }
+
+        & > a:hover {
+            color: #fff;
+            background-color: #f23d46;
+        }
+    }
+
+}
+
+// Tabbable tabs
+// -------------------------
+
+// Hide tabbable panes to start, show them when `.active`
+.tab-content {
+    > .tab-pane {
+        display: none;
+    }
+    > .active {
+        display: block;
+    }
+}
