--- a/src/sass/_grid.scss
+++ b/src/sass/_grid.scss
@@ -6,4 +6,10 @@
     width: $container-width;
 }
 
+.row {
+    margin-left: -15px;
+    margin-right: -15px;
+    @include clearfix;
+}
+
 @include make-grid();
