--- a/src/css/main.css
+++ b/src/css/main.css
@@ -619,6 +619,7 @@ template {
   width: 1200px; }
 
 .row {
+  position: relative;
   margin-left: -15px;
   margin-right: -15px; }
   .row:before, .row:after {
@@ -798,7 +799,8 @@ template {
   white-space: nowrap; }
 
 .btn-default {
-  border-color: #b3b3b3; }
+  border-color: #b3b3b3;
+  background-color: #fff; }
 
 .btn-primary {
   color: #dc3941;
@@ -1051,7 +1053,6 @@ h6, .h6 {
 
 p {
   margin-top: 20px;
-  margin-bottom: 22px;
   margin-bottom: 19px;
   line-height: 1.9;
   letter-spacing: 1.4px; }
@@ -1137,7 +1138,7 @@ p {
 .category {
   padding-top: 65px;
   padding-bottom: 160px; }
-  .category:nth-of-type(2n) {
+  .category.bg-gray {
     background-color: #f4f7fa; }
   .category .category-hd {
     position: relative;
@@ -1238,13 +1239,16 @@ p {
 
 .custom {
   padding-top: 160px;
-  background: url(../img/custom-bg.png) no-repeat center center;
+  background: url(../img/custom-bg.png) no-repeat center top;
   background-color: #fff; }
   .custom .custom-left {
-    padding: 80px 0 40px;
+    padding: 73px 70px 40px;
     text-align: center;
     color: #fff;
     background-color: #f23d46; }
+    .custom .custom-left, .custom .custom-left + .custom-right {
+      position: relative;
+      float: left; }
     .custom .custom-left > .secondary {
       color: #fffefe;
       position: relative; }
@@ -1255,5 +1259,87 @@ p {
       .custom .custom-left > .custom-desc > p {
         margin: 0;
         line-height: 25px; }
+    .custom .custom-left > .custom-btn {
+      margin: 0 auto;
+      display: block;
+      width: 49px;
+      border: 1px solid #fff;
+      color: #fff;
+      font-size: 19px;
+      line-height: 45px; }
+  .custom .custom-right img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 825px;
+    height: 451px;
+    z-index: 2; }
+  .custom .custom-right:after {
+    position: absolute;
+    right: -855px;
+    bottom: -481px;
+    display: block;
+    content: '';
+    width: 370px;
+    height: 450px;
+    background-color: #f23d46;
+    z-index: 1; }
+
+.footer .address {
+  padding-top: 80px;
+  padding-bottom: 24px;
+  background-color: #f6f6f6; }
+  .footer .address ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    line-height: 32px; }
+    .footer .address ul > li {
+      font-size: 12px;
+      color: #999; }
+  .footer .address .contact {
+    position: absolute;
+    right: 0;
+    z-index: 1; }
+    .footer .address .contact .btn {
+      margin-bottom: 19px; }
+      .footer .address .contact .btn > span {
+        margin-left: 14px; }
+
+.footer .address-title, .footer .address-title__link {
+  margin: 0;
+  padding: 28px 0 10px;
+  border-top: 2px solid #b3b3b3;
+  font-size: 20px; }
+
+.footer .address-title__link {
+  padding-bottom: 30px;
+  border-bottom: 2px solid #b3b3b3; }
+  .footer .address-title__link:not(:first-child) {
+    border-top: 0; }
+
+.footer .share-link {
+  margin: 0 15px;
+  color: #ccc; }
+  .footer .share-link > span {
+    font-size: 25px; }
+
+.footer .copyright {
+  position: relative;
+  padding: 46px 0;
+  background-color: #333;
+  color: #ccc; }
+  .footer .copyright p {
+    margin: 0;
+    line-height: 34px; }
+  .footer .copyright:after {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    content: '';
+    width: 0;
+    height: 0;
+    border-bottom: 764px solid #f23d46;
+    border-left: 735px solid transparent; }
 
 /*# sourceMappingURL=main.css.map */
