--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -351,3 +351,16 @@
         }
     }
 }
+
+.sales {
+    z-index: 100;
+    .logo {
+        padding: 80px 67px;
+        text-align: center;
+        transition: box-shadow .3s ease-in-out;
+
+        &:hover {
+            box-shadow: 0px 0px 25px rgba(0, 0, 0, .2);
+        }
+    }
+}
