--- a/src/sass/mixins/_utilties.scss
+++ b/src/sass/mixins/_utilties.scss
@@ -29,3 +29,11 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+@mixin tab-focus() {
+    // WebKit-specific. Other browsers will keep their default outline style.
+    // (Initially tried to also force default via `outline: initial`,
+    // but that seems to erroneously remove the outline in Firefox altogether.)
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
+}
