--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -77,5 +77,37 @@ output {
 
 .form-control {
     display: block;
+    padding: 14px 20px;
     width: 100%;
+    font-size: 14px;
+    font-weight: 200;
+    background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+    border: 1px solid #e6e6e6;
+
+    &:focus {
+        outline: 0;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    }
+
+    &::placeholder {
+        color: #ccc;
+    }
 }
+
+.form-group {
+    margin-bottom: 19px;
+}
+
+.form-action {
+    margin-top: 40px;
+
+    .btn, button {
+        display: block;
+        margin: 0 auto;
+        padding: 10px 0;
+        width: 200px;
+        font-size: 14px;
+        color: #4d4d4d;
+    }
+}
+
