--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,7 +6,7 @@ $primary-color-dark: #dc3941;
 
 // stage
 $font-family-base: tahoma,arial,"pingfang sc",'Hiragino Sans GB','\5b8b\4f53',sans-serif;
-$body-bg: #fff;
+$body-bg: #f6f6f6;
 $font-size-base: 14px;
 
 // type
