--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -10,9 +10,27 @@
     background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
     border: 1px solid transparent;
     white-space: nowrap;
+
+    &.disabled,
+    &[disabled],
+    fieldset[disabled] & {
+        cursor: not-allowed;
+        background-color: #ccc;
+        border: 0;
+
+
+    }
+}
+
+a.btn {
+    &.disabled,
+    fieldset[disabled] & {
+        pointer-events: none; // Future-proof disabling of clicks on `<a>` elements
+    }
 }
 
 .btn-default {
+    color: #333;
     border-color: #b3b3b3;
     background-color: #fff;
 }
