--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -160,7 +160,9 @@
                 position: relative;
                 margin: 0 auto;
                 width: 217px;
-                letter-spacing: 2.1px;
+                color: #fff;
+                font-size: 11px;
+                letter-spacing: 1.5px;
                 transform: translate3d(0, 40px, 0);
                 transition: transform .5s ease-in-out;
 
@@ -202,7 +204,7 @@
     background-color: #fff;
 
     .custom-left {
-        padding: 73px 70px 40px;
+        padding: 70px 70px 40px;
         text-align: center;
         color: #fff;
         background-color: $primary-color;
@@ -222,11 +224,11 @@
         }
 
         > .custom-desc {
-            margin: 40px 0 48px;
+            margin: 40px 0 37px;
 
             & > p {
                 margin: 0;
-                line-height: 25px;
+                color: #fff;
             }
         }
 
