--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -101,6 +101,7 @@
             width: 180px;
             font-size: 24px;
             text-align: center;
+            color: #333;
             background-color: #fff;
         }
 
