--- a/src/sass/_product.scss
+++ b/src/sass/_product.scss
@@ -64,6 +64,7 @@
                     line-height: 40px;
                     color: #808080;
                     cursor: pointer;
+                    margin-right: 20px;
                     transition: all .3s ease-in-out;
                     border-radius: 2px;
                     &:hover{
