--- a/src/template/register.html
+++ b/src/template/register.html
@@ -15,15 +15,19 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="">设置密码</label>
-        <input type="text" class="form-control" placeholder="请输入右侧的随机码">
+        <label for="">短信验证码</label>
+        <input type="text" class="form-control" placeholder="请输入手机短信验证码">
         <div class="control-right">
             <a href="" class="btn btn-reverse disabled" >点击获取</a>
         </div>
     </div>
     <div class="form-group">
-        <label for="">确认密码</label>
-        <input type="text" class="form-control" placeholder="请输入右侧的随机码">
+        <label for="">设置密码</label>
+        <input type="password" class="form-control" placeholder="请输入密码，8-16位，以字母开头">
+    </div>
+    <div class="form-group">
+      <label for="">确认密码</label>
+      <input type="password" class="form-control" placeholder="请输入密码，8-16位，以字母开头">
     </div>
     <div class="form-group">
         <label class="checkbox-group">
@@ -34,7 +38,7 @@
     </div>
     <div class="form-action">
         <a href="" class="btn btn-reverse">确定</a>
-        <p class="help-block">若未收到短信验证码，请<a>点击这里</a>接听语音验证</p>
+        <p class="help-block">若未收到短信验证码，请<a>点击这里</a> 接听语音验证</p>
         <p class="help-block"><a href="">已有用户登录</a></p>
     </div>
 </div>
